--- a/index.html
+++ b/index.html
@@ -16,6 +16,13 @@
   <!-- AOS Animation Library -->
   <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 </head>
+<script>
+  AOS.init({
+    duration: 900,
+    once: false,
+    disable: false   // ensure not disabled on mobile
+  });
+</script>
 <body>
   <!-- Navbar -->
   <header class="navbar">
@@ -70,9 +77,8 @@
     <div class="project-card">
       <div class="project-slider">
         <img src="images/web-design.jpg" alt="Project 1 Image 1">
-        <img src="images/web-design2.png" alt="Project 1 Image 2">
-        <img src="images/web-design3.png" alt="Project 1 Image 3">
-        <img src="images/web-design4.png" alt="Project 1 Image 4">
+        <img src="images/web-design2.jpg" alt="Project 1 Image 2">
+        <img src="images/web-design3.jpg" alt="Project 1 Image 3">
       </div>
       <h3>Web Design Project</h3>
       <p>A modern, responsive website built for a client in the tech industry.</p>
@@ -80,17 +86,12 @@
 
     <div class="project-card">
       <div class="project-slider">
-        <img src="images/Children's Day 2025.png" alt="Project 2 Image 1">
-        <img src="images/Design2.png" alt="Project 2 Image 2">
+        <img src="images/Children's Day 2025.jpg" alt="Project 2 Image 1">
+        <img src="images/Design2.jpg" alt="Project 2 Image 2">
         <img src="images/design-project.jpg" alt="Project 2 Image 3">
-        <img src="images/Mubarak Holiday.png" alt="Project 2 Image 4">
-        <img src="images/Workers' Day.png" alt="Project 2 Image 5">
-        <img src="images/practical.png" alt="Project 2 Image 6">
-        <img src="images/BAYTOD COLLEGE pic.jpg" alt="Project 2 Image 7">
-        <img src="images/birthday design 24.jpg" alt="Project 2 Image 8">
-        <img src="images/Flyer.png" alt="Project 2 Image 9">
-        <img src="images/GROUP B ASSIGNMENT.jpg" alt="Project 2 Image 10">
-        <img src="images/prosper graphix.jpg" alt="Project 2 Image 11">
+        <img src="images/Mubarak Holiday.jpg" alt="Project 2 Image 4">
+        <img src="images/Workers' Day.jpg" alt="Project 2 Image 5">
+
       </div>
       <h3>Graphic Design Portfolio</h3>
       <p>Brand identity design with custom typography and illustration.</p>
@@ -101,10 +102,6 @@
         <img src="images/photoshoot.jpg" alt="Project 3 Image 1">
         <img src="images/photoshoot2.jpg" alt="Project 3 Image 2">
         <img src="images/photoshoot3.jpg" alt="Project 3 Image 3">
-        <img src="images/photoshoot4.jpeg" alt="Project 3 Image 4">
-        <img src="images/photoshoot5.jpg" alt="Project 3 Image 5">
-        <img src="images/photoshoot6.jpg" alt="Project 3 Image 6">
-        <img src="images/photoshoot7.jpg" alt="Project 3 Image 7">
       </div>
       <h3>Photographs/Photo Studio </h3>
       <p>Nature, birthdays, weddings, ceremonies or any form of events.</p>
@@ -115,8 +112,7 @@
         <img src="images/dog-breeding3.jpg" alt="Project 4 Image 1">
         <img src="images/dog-breeding2.jpg" alt="Project 4 Image 2">
         <img src="images/dog-breeding5.jpg" alt="Project 4 Image 3">
-        <img src="images/dog-breeding4.jpeg" alt="Project 4 Image 4">
-        <img src="images/dog-breeding.jpg" alt="Project 4 Image 5">
+
       </div>
       <h3>Dog Breeding Showcase</h3>
       <p>Photography and website for showcasing premium dog breeds.</p>
